force-app/main/default/objects/Auction__c/Auction__c.object-meta.xml
<CustomObject>
    <label>Auction</label>
    <nameField>
        <label>Auction Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>