force-app/main/default/objects/Auction__c/fields/Chit_Group_capacity__c.field-meta.xml
<CustomField>
    <fullName>Chit_Group_capacity__c</fullName>
    <formula>Chit_Group_Name__r.Chit_Members_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chit Group capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>