force-app/main/default/objects/Auction__c/fields/Chit_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Chit_Group_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Chit Group Name</label>
    <referenceTo>Chit_Groups__c</referenceTo>
    <relationshipLabel>Auctions</relationshipLabel>
    <relationshipName>Auctions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>