force-app/main/default/objects/Auction__c/fields/Winning_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Winning_Bid_Amount__c</fullName>
    <label>Winning Bid Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>