force-app/main/default/objects/Auction__c/fields/Winning_Bidder__c.field-meta.xml
<CustomField>
    <fullName>Winning_Bidder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Winning Bidder</label>
    <referenceTo>Chit_Customer__c</referenceTo>
    <relationshipLabel>Auctions</relationshipLabel>
    <relationshipName>Auctions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>